# pixi-inveon

./: .gitignore  Dockerfile  README.md  command.json  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
doc/: README.md  conversion_specifications.md  issues.md
scripts/: build.sh  upload.sh
src/codes/: DICOM-CID-4020.json
src/inveonimaging/: dicom.py  factory.py  invdicom.py  inveon.py  inveonFile2DICOM.py  inveonFolder2DICOM.py
tests/: mpet4800a_em111_v1.sh
